2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Correct two comments, and tweak two others.
	* src/color.c (color_update): Correct one comment, tweak some others,
	remove two superfluous ones, and remove an unneeded 'if'.

2014-04-08  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/nano.c (main): Convert the literal UTF-8 whitespace string into
	its corresponding byte sequence, and add a comment for it.
	* src/{files.c,global.c,help.c,winio.c}: Reformat some comment blocks,
	fix a few typos, and remove a few unneeded blank lines.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_binding): Melt the binding and unbinding code,
	which are very similar, into a single function.
	* src/rcfile.c (parse_binding): Uppercase only the first two or three
	characters of the key name, in order to preserve ^Space and M-Space,
	so they can be unbound.  Fixes Savannah bug #41940.
	* doc/syntax/go.nanorc: Extend the syntax highlighting for Go lang,
	from the submission by Robert Clausecker <fuzxxl@Savannah>.

2014-04-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/{proto.h,global.c,text.c}: Keep a pointer to the Uncut item in
	the functions list, to be able to change its description to Unjustify
	at the appropriate moment.  This avoids having to fully repopulate
	the functions and shortcuts lists before and after every Justify.
	Also, look for ^U only in the main menu, to which ^W M-J factually
	returns and which shortcut_init() "sneakily" sets.
	* src/{proto.h,files.c,global.c,nano.c,rcfile.c}: Drop the obsolete
	argument of shortcut_init(), and remove two unneeded calls of it.
	* src/global.c (shortcut_init): Allow M-J after an --enable-justify.
	* src/rcfile.c (parse_rcfile): The user documentation only speaks
	of options, not of flags.  Make the error messages conform.
	* src/rcfile.c (check_vitals_mapped): Improve layout of message.

2014-04-06  Benno Schulenberg  <bensberg@justemail.net>